Apache commons safe base64